✨ about section and responsive

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<div class="mt-32">
+  <h2 class="text-center underline text-4xl font-bold px-4">#About</h2>
+  <div class="carbonImg"></div>
+</div>
