--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-2">
+<div class="2xl:grid 2xl:grid-cols-2 xl:flex xl:justify-center">
   <div class="flex flex-col justify-center items-center">
     <h2 class="font-bold text-4xl">{{ "heroTitle" | translate }}</h2>
     <p class="text-2xl mt-5 secondary">Full stack typescript developper</p>
@@ -7,7 +7,7 @@
       <i class="fab fa-angular text-red-600"></i> Angular 2+,
       <i class="fab fa-react text-blue-400"></i> React JS,
     </p>
-    <p class="text-2xl secondary">
+    <p class="text-2xl secondary mt-6">
       <a class="mx-4" href="https://www.twitch.com/clemcode" target="_blank"
         ><i class="fab fa-twitch text-purple-600"></i
       ></a>
@@ -20,7 +20,7 @@
       </a>
     </p>
   </div>
-  <div class="flex justify-center">
-    <img class="rounded h-80" src="assets/img/me.jpeg" />
+  <div class="flex justify-center xl:ml-8">
+    <img class="rounded h-80" src="assets/img/me2.jpg" />
   </div>
 </div>
