--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
+<nav class="w-10/12 mt-4"><app-langs></app-langs></nav>
 <section class="2xl:w-3/5 xl:w-full">
   <app-hero></app-hero>
 </section>
-<section>
+<section class="w-full">
   <app-about></app-about>
+</section>
+<section class="2xl:w-3/5 xl:w-full">
+  <app-projects></app-projects>
 </section>
