--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,9 +1,11 @@
 <div class="2xl:grid 2xl:grid-cols-2 xl:flex xl:justify-center">
   <div class="flex flex-col justify-center items-center">
-    <h2 class="font-bold text-4xl">{{ "heroTitle" | translate }}</h2>
-    <p class="text-2xl mt-5 secondary">Full stack typescript developper</p>
-    <p class="text-2xl secondary">
-      <i class="fab fa-node-js text-green-600"></i> Node JS
+    <h2 class="font-bold text-4xl text-center">
+      {{ "heroTitle" | translate }}
+    </h2>
+    <p class="text-2xl mt-5 secondary">{{ "heroDesc" | translate }}</p>
+    <p class="text-2xl secondary mx-5">
+      <i class="fab fa-node-js text-green-600"></i> Node JS,
       <i class="fab fa-angular text-red-600"></i> Angular 2+,
       <i class="fab fa-react text-blue-400"></i> React JS,
     </p>
