✨ (GraphQL): Add interceptor for graphQl Http Response format

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -4,10 +4,10 @@
       {{ "heroTitle" | translate }}
     </h2>
     <p class="text-2xl mt-5 secondary">{{ "heroDesc" | translate }}</p>
-    <p class="text-2xl secondary mx-5">
-      <i class="fab fa-node-js text-green-600"></i> Node JS,
+    <p class="text-2xl secondary mx-5 text-center">
+      <i class="fab fa-node-js text-green-600"></i> NodeJS,
       <i class="fab fa-angular text-red-600"></i> Angular 2+,
-      <i class="fab fa-react text-blue-400"></i> React JS,
+      <i class="fab fa-react text-blue-400"></i> ReactJS
     </p>
     <p class="text-2xl secondary mt-6">
       <a class="mx-4" href="https://www.twitch.com/clemcode" target="_blank"
