🚧 (Projects): Starting to work about the project section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,4 @@
-<div class="mt-32">
-  <h2 class="text-center underline text-4xl font-bold px-4">
-    #{{ "aboutTitle" | translate }}
-  </h2>
-  <div class="carbonImg"></div>
+<h2 class="text-center underline text-4xl font-bold px-4">#{{ 'aboutTitle' | translate }}</h2>
+<div>
+	<div class="carbonImg"></div>
 </div>
