--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,16 @@
 .menuItem {
-  font-family: "Poppins", sans-serif;
-  text-transform: capitalize;
-  font-weight: 500;
-  margin: 0 10px;
-  font-size: 18px;
+	font-family: 'Poppins', sans-serif;
+	text-transform: capitalize;
+	font-weight: 500;
+	margin: 0 10px;
+	font-size: 18px;
 }
 
 .menuItem:hover {
-  cursor: pointer;
-  border-bottom: 3px solid #ff9d0a;
+	cursor: pointer;
+	border-bottom: 3px solid #ff9d0a;
 }
 
 section {
-  margin-top: 4rem;
+	margin-top: 4rem;
 }
