--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,6 @@
-<div class="mt-32">
-  <h2 class="text-4xl font-bold text-center sectionTitle">#Projects</h2>
+<div class="w-full">
+	<h2 class="text-4xl font-bold text-center sectionTitle mb-12">#Projects</h2>
+	<div class="grid grid-cols-3 mb-12">
+		<div *ngFor="let project of projectsList" class="px-5"></div>
+	</div>
 </div>
