--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,3 +1,10 @@
 .sectionTitle {
-  text-decoration: underline #ff9d0a;
+	text-decoration: underline #ff9d0a;
+}
+
+.projectThumbnails {
+	height: 350px;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: top;
 }
