--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,53 @@
 <div class="w-full">
 	<h2 class="text-4xl font-bold text-center sectionTitle mb-12">#Projects</h2>
-	<div class="grid grid-cols-3 mb-12">
-		<div *ngFor="let project of projectsList" class="px-5"></div>
+	<div class="mb-12 w-full">
+		<div
+			*ngFor="let project of projectsList"
+			class="mb-8 shadow-xl border-gray-200 border-2 rounded px-12 py-6 mx-12 relative"
+		>
+			<h3 class="font-bold text-2xl text-center">
+				{{ project.title }}
+			</h3>
+			<span class="statusProject border-2" [ngClass]="getClassStatusTag(project.status)">{{
+				project.status | translate
+			}}</span>
+			<p class="text-center">
+				<img
+					*ngFor="let technologie of project.technologies"
+					class="inline-block mx-2"
+					height="30"
+					width="30"
+					[src]="'../../assets/img/' + technologie.label.toLowerCase() + '.png'"
+				/>
+			</p>
+			<div class="flex justify-center">
+				<div class="grid grid-cols-2 mt-6">
+					<div class="w-3/4">
+						<carousel
+							[loop]="true"
+							[autoplay]="true"
+							[arrowsTheme]="'dark'"
+							cellWidth="100%"
+							[height]="400"
+							[objectFit]="'contain'"
+						>
+							<div class="carousel-cell" *ngFor="let image of project.images">
+								<img [src]="'http://167.172.177.134:1337' + image.url" alt="" />
+							</div>
+						</carousel>
+					</div>
+					<div class="px-12">
+						<div class="flex flex-col items-center">
+							<markdown [data]="project.description"></markdown>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p class="text-center textProject mt-6">
+				<span class="block font-bold text-xl">Code</span>
+				<a class="mx-2 repoLink" [href]="project.frontRepository" target="_blank">Frontend</a> /
+				<a class="mx-2 repoLink" [href]="project.backRepository" target="_blank">Backend</a>
+			</p>
+		</div>
 	</div>
 </div>
