--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,15 @@
-@import "tailwindcss/base";
+@import 'tailwindcss/base';
 
-@import "tailwindcss/components";
+@import 'tailwindcss/components';
 
-@import "tailwindcss/utilities";
+@import 'tailwindcss/utilities';
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 /* You can add global styles to this file, and also import other style files */
 
 * {
-  font-family: "Lato", sans-serif;
-  font-size: 18px;
+	font-family: 'Lato', sans-serif;
+	font-size: 18px;
 }
 
 h1,
@@ -17,10 +17,30 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Poppins", sans-serif;
-  color: #424242;
+	font-family: 'Poppins', sans-serif;
+	color: #424242;
 }
 
 .secondary {
-  color: #8f8f8f;
+	color: #8f8f8f;
+}
+
+body {
+	background-color: #fefefefe;
+}
+
+.subtitle {
+	color: #424242;
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+	font-weight: 900;
+}
+
+.subtitleBlock {
+	margin-top: 2rem;
+}
+
+.textProject,
+.listItemProject {
+	color: #444444;
 }
