--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,7 +2,7 @@
 	<h2 class="text-4xl font-bold text-center sectionTitle mb-12">#Projects</h2>
 	<div class="mb-12 w-full">
 		<div
-			*ngFor="let project of projectsList"
+			*ngFor="let project of projects.projectsList"
 			class="mb-8 shadow-xl border-gray-200 border-2 rounded px-12 py-6 mx-12 relative"
 		>
 			<h3 class="font-bold text-2xl text-center">
