--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -13,3 +13,23 @@
 .repoLink:hover {
 	color: #ff9d0a;
 }
+
+.allTag {
+	height: 40px;
+	color: #ff9d0a;
+	vertical-align: sub;
+}
+
+.active {
+	filter: none !important;
+	transform: scale(1.3);
+}
+
+.tagTechno {
+	filter: grayscale(100%);
+}
+
+.tagTechno:hover {
+	transform: scale(1.3);
+	filter: grayscale(0%);
+}
