--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
 <h2 class="text-center underline text-4xl font-bold px-4">#{{ 'aboutTitle' | translate }}</h2>
 <div>
-	<div class="carbonImg"></div>
+	<img src="../../assets/img/carbon.svg" />
 </div>
