--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,7 +3,7 @@
 		#{{ 'projectsTitle' | translate }}
 	</h2>
 	<div class="flex justify-center mb-12">
-		<div class="switchTechnologiesContainer">
+		<div class="switchTechnologiesContainer text-center">
 			<span
 				class="inline-block mx-2 cursor-pointer allTag tagTechno text-base uppercase"
 				(click)="technologies.technologySelected = undefined"
@@ -24,7 +24,7 @@
 	</div>
 	<div class="mb-12 w-full">
 		<div
-			*ngFor="let project of projects.projectsList"
+			*ngFor="let project of projects.getProjectListsFiltered()"
 			class="mb-8 shadow-xl border-gray-200 border-2 rounded px-12 py-6 mx-12 relative"
 		>
 			<h3 class="font-bold text-2xl text-center">
