📱 (Projects): Responsive design on projects section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 	<app-hero></app-hero>
 </section>
 <section class="w-full">
-	<app-about></app-about>
+	<app-about class="flex flex-col items-center"></app-about>
 </section>
 <section class="w-full">
 	<app-projects></app-projects>
