--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,7 +3,7 @@
 		<h2 class="font-bold text-4xl text-center">
 			{{ 'heroTitle' | translate }}
 		</h2>
-		<p class="text-2xl mt-5 secondary">{{ 'heroDesc' | translate }}</p>
+		<p class="text-2xl mt-5 secondary text-center mx-2">{{ 'heroDesc' | translate }}</p>
 		<p class="text-2xl secondary mx-5 text-center">
 			<i class="fab fa-node-js text-green-600"></i> NodeJS,
 			<i class="fab fa-angular text-red-600"></i> Angular 2+,
