--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -25,14 +25,27 @@
 	<div class="mb-12 w-full">
 		<div
 			*ngFor="let project of projects.getProjectListsFiltered()"
-			class="mb-8 shadow-xl border-gray-200 border-2 rounded px-12 py-6 mx-12 relative"
+			class="
+				mb-8
+				shadow-xl
+				border-gray-200 border-2
+				rounded
+				xl:px-12
+				lg:px-4
+				py-6
+				xl:mx-12
+				mx-2
+				relative
+				text-right
+			"
 		>
+			<span class="statusProject border-2 mr-2" [ngClass]="getClassStatusTag(project.status)">{{
+				project.status | translate
+			}}</span>
 			<h3 class="font-bold text-2xl text-center">
 				{{ project.title }}
 			</h3>
-			<span class="statusProject border-2" [ngClass]="getClassStatusTag(project.status)">{{
-				project.status | translate
-			}}</span>
+
 			<p class="text-center">
 				<img
 					*ngFor="let technologie of project.technologies"
@@ -43,14 +56,14 @@
 				/>
 			</p>
 			<div class="flex justify-center">
-				<div class="grid grid-cols-2 mt-6">
+				<div class="2xl:grid 2xl:grid-cols-2 flex flex-col items-center mt-6 w-full">
 					<div class="w-3/4">
 						<carousel
 							[loop]="true"
 							[autoplay]="true"
 							[arrowsTheme]="'dark'"
 							cellWidth="100%"
-							[height]="400"
+							[height]="getCarouselHeight()"
 							[objectFit]="'contain'"
 						>
 							<div class="carousel-cell" *ngFor="let image of project.images">
@@ -58,8 +71,8 @@
 							</div>
 						</carousel>
 					</div>
-					<div class="px-12">
-						<div class="flex flex-col items-center">
+					<div class="2xl:px-12 px-2">
+						<div class="flex flex-col items-center text-left">
 							<markdown [data]="project.description"></markdown>
 						</div>
 					</div>
