✨ (Live): Add live section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
 <section class="2xl:w-3/5 xl:w-full">
 	<app-hero></app-hero>
 </section>
-<section class="w-full">
+<section class="w-5/6">
 	<app-about class="flex flex-col items-center"></app-about>
+</section>
+<section>
+	<app-live class="flex flex-col items-center"></app-live>
 </section>
 <section class="w-full">
 	<app-projects></app-projects>
