--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,9 @@
 <h2 class="text-center underline text-4xl font-bold px-4">#{{ 'aboutTitle' | translate }}</h2>
-<div>
+<div class="2xl:grid 2xl:grid-cols-2 flex flex-col items-center">
 	<img src="../../assets/img/carbon.svg" />
+	<div class="grid grid-cols-3">
+		<div class="flex justify-center mb-4" *ngFor="let image of hotTechnos">
+			<img class="imgHotTechnos" [src]="'../../assets/img/' + image + '.png'" />
+		</div>
+	</div>
 </div>
