🚀 (SSL): Change envioronement settings to apply https

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -26,6 +26,6 @@
 		</p>
 	</div>
 	<div class="flex justify-center xl:ml-8">
-		<img class="rounded h-80" src="assets/img/me2.jpg" />
+		<img alt="me" class="rounded h-80" src="assets/img/me2.jpg" />
 	</div>
 </div>
