--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -18,6 +18,7 @@
 				height="40px"
 				width="40px"
 				[src]="'../../assets/img/' + technology.label.toLowerCase() + '.png'"
+				[alt]="technology.label.toLowerCase()"
 				(click)="technologies.technologySelected = technology"
 			/>
 		</div>
@@ -52,6 +53,7 @@
 					class="inline-block mx-2"
 					height="30"
 					width="30"
+					[alt]="technologie.label.toLowerCase()"
 					[src]="'../../assets/img/' + technologie.label.toLowerCase() + '.png'"
 				/>
 			</p>
@@ -67,7 +69,7 @@
 							[objectFit]="'contain'"
 						>
 							<div class="carousel-cell" *ngFor="let image of project.images">
-								<img [src]="'http://167.172.177.134:1337' + image.url" alt="" />
+								<img alt="slide" [src]="'http://167.172.177.134:1337' + image.url" alt="" />
 							</div>
 						</carousel>
 					</div>
