--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="w-10/12 mt-4"><app-langs></app-langs></nav>
-<section class="2xl:w-3/5 xl:w-full">
+<section class="2xl:w-3/5 xl:w-full heroSection">
 	<app-hero></app-hero>
 </section>
 <section class="w-5/6">
