--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -12,9 +12,10 @@
 }
 
 .allTag {
-	height: 40px;
-	color: #ff9d0a;
 	vertical-align: sub;
+	padding: 5px 8px;
+	background-color: #ff9d0a;
+	border-radius: 0.3rem;
 }
 
 .active {
