--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,51 @@
-.menuItem {
-	font-family: 'Poppins', sans-serif;
-	text-transform: capitalize;
-	font-weight: 500;
-	margin: 0 10px;
-	font-size: 18px;
+@import '../variables.scss';
+
+header,
+footer {
+	height: 10vh;
 }
 
-.menuItem:hover {
-	cursor: pointer;
-	border-bottom: 3px solid #ff9d0a;
-}
-
-@media (min-width: 1px) {
-	section {
-		margin-top: 4rem;
+@media screen and (min-width: $large-screen) {
+	main {
+		display: grid;
+		grid-template-columns: 15vw 1fr;
 	}
 }
 
-@media (min-width: 1280px) {
-	section {
-		margin-top: 10rem;
+@media screen and (max-width: $large-screen) {
+	main {
+		display: block;
+	}
+	aside {
+		display: none;
 	}
 }
 
-.heroSection {
-	margin-top: 2rem;
+main {
+	height: 80vh;
+}
+
+nav {
+	border-right: 5px solid $secondary;
+	height: 100%;
+}
+
+.side-menu-opened {
+	left: 0;
+}
+
+.side-menu-closed {
+	left: -301px;
+}
+.side-menu {
+	background: #000;
+	height: 100vh;
+	width: 300px;
+	position: absolute;
+	transition: left 0.5s ease;
+}
+
+.side-menu-control {
+	height: 10vh;
+	padding: 0 1rem;
 }
