--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -1,15 +1,20 @@
-<div class="flex justify-between w-full px-4 mt-6">
-	<div>logo</div>
+<div class="flex justify-between w-full">
+	<div id="logo">logo</div>
+	<div id="hamburger-menu">
+		<i class="fas fa-bars cursor-pointer" (click)="changeMenuStatus()"></i>
+	</div>
 	<div>
 		<img
 			(click)="langs.changeCurrentLanguage(langsEnum.fr)"
 			class="flag-images"
 			src="../../assets/img/franceFlag.svg"
+			alt="franceFlag"
 		/>
 		<img
 			(click)="langs.changeCurrentLanguage(langsEnum.en)"
 			class="flag-images"
 			src="../../assets/img/ukFlag.svg"
+			alt="ukFlag"
 		/>
 	</div>
 </div>
