--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,26 @@
 		<ng-lottie [options]="animationOptions"></ng-lottie>
 	</div>
 	<div class="flex flex-col items-center sm:mt-12 xl:mt-0">
-		<div>
-			<div
-				class="message message-top"
-				*ngFor="let message of messages"
-				[innerHtml]="message | translate"
-			></div>
+		<div class="">
+			<div class="relative" id="messages-container">
+				<div
+					class="message"
+					*ngFor="let message of messages"
+					[innerHtml]="message | translate"
+				></div>
+				<div
+					class="avatar-container"
+					[ngStyle]="{ height: getMessagesContainerHeight() + 'px' }"
+				>
+					<img src="../../assets/img/me.jpeg" class="avatar-msg rounded-full" />
+				</div>
+			</div>
+
+			<div class="message waiting-message" *ngIf="!chat.messagesSubject.isStopped">
+				<div class="rounded-full firstCircle"></div>
+				<div class="rounded-full secondCircle"></div>
+				<div class="rounded-full thirdCircle"></div>
+			</div>
 		</div>
 	</div>
 </div>
