--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,11 +5,28 @@
 	max-width: 600px;
 }
 
-.message-top {
+.message {
+	border-radius: 5px 15px 15px 5px;
+	margin-top: 5px;
+}
+
+.waiting-message {
+	background-color: $secondary;
+	div {
+		height: 10px;
+		width: 10px;
+		display: inline-block;
+		margin: 0 5px;
+		background-color: $background;
+		opacity: 0.7;
+	}
+}
+
+.message:first-child {
 	border-radius: 15px 15px 15px 5px;
 }
 
-.message-bottom {
+.message:last-child {
 	border-radius: 5px 15px 15px 15px;
 }
 
@@ -21,6 +38,12 @@
 	position: absolute;
 	height: 84px;
 	left: -90px;
-	top: 50%;
-	transform: translateY(-50%);
+	bottom: 0px;
+}
+
+.avatar-container {
+	height: 0px;
+	transition-property: height;
+	transition-duration: 1s;
+	transition-timing-function: ease;
 }
