--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,44 +34,57 @@ app-contact {
 	width: 100%;
 }
 
-.message {
-	padding: 0.6rem 2rem;
-	background-color: $primary;
-	width: fit-content;
+app-home {
+	.message {
+		padding: 0.6rem 2rem;
+		background-color: $primary;
+		width: fit-content;
+		animation: message-anim 1s ease;
 
-	h2 {
-		color: $accent;
-		font-weight: 700;
-		font-size: 1.5rem;
+		h2 {
+			color: $accent;
+			font-weight: 700;
+			font-size: 1.5rem;
+		}
+		p {
+			color: $background;
+		}
 	}
-	p {
-		color: $background;
+
+	.fa-github {
+		color: #333;
 	}
-}
 
-.fa-github {
-	color: #333;
-}
+	.fa-linkedin {
+		color: #0077b5;
+	}
 
-.fa-linkedin {
-	color: #0077b5;
-}
+	.fa-twitch {
+		color: #9146ff;
+	}
 
-.fa-twitch {
-	color: #9146ff;
-}
+	.fab {
+		font-size: 1.2rem;
+		margin: 0 5px;
+	}
 
-.fab {
-	font-size: 1.2rem;
-	margin: 0 5px;
-}
+	.hello-anim {
+		animation: 1.2s ease hello-anim 1s;
+	}
 
-.hello-anim {
-	animation: 1.2s ease hello-anim;
-}
+	.point-anim {
+		animation: 1.2s ease point-anim 1s;
+	}
 
-.point-anim {
-	animation: 1.2s ease point-anim;
+	.firstCircle {
+		animation: waitingCircle-anim 1s ease infinite;
+	}
+	.secondCircle {
+		animation: waitingCircle-anim 1s ease infinite 0.2s;
+	}
+	.thirdCircle {
+		animation: waitingCircle-anim 1s ease infinite 0.4s;
+	}
 }
 
 @keyframes hello-anim {
@@ -104,6 +117,29 @@ app-contact {
 	}
 	75% {
 		transform: translateY(8px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
+
+@keyframes message-anim {
+	from {
+		opacity: 0;
+		transform: translateX(100px);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+
+@keyframes waitingCircle-anim {
+	0% {
+		transform: translateY(0px);
+	}
+	50% {
+		transform: translateY(-6px);
 	}
 	100% {
 		transform: translateY(0px);
