--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,14 @@
 
 * {
 	font-family: 'Poppins', sans-serif;
-	font-size: 24px;
 	color: $primary;
+	font-size: 16px;
+}
+
+@media screen and (min-width: 1280px) {
+	* {
+		font-size: 24px;
+	}
 }
 
 body {
