✨ (Technologies): Add technologies page

--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,1 +1,7 @@
-<p>technologies works!</p>
+<div class="grid grid-cols-5 w-3/5 mx-auto">
+	<img
+		class="techno-image"
+		[src]="baseUrl + techno.image.url"
+		*ngFor="let techno of technologies.technologiesList"
+	/>
+</div>
