--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,6 +103,27 @@ app-home {
 	}
 }
 
+$elements: 15;
+@for $i from 0 through $elements {
+	app-cursus-step:nth-child(0n + #{$i}) > .cursus-step-container {
+		animation: cursusStepAnim 1s ease calc(#{$i} * 200ms) both;
+	}
+}
+
+app-cursus {
+	overflow: hidden;
+}
+
+.end-line > .grid > .flex > .bottom-line {
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+.start-line > .grid > .flex > .top-line {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+
 @keyframes hello-anim {
 	0% {
 		transform: rotateZ(0deg);
@@ -158,6 +179,17 @@ app-home {
 		transform: translateY(-6px);
 	}
 	100% {
+		transform: translateY(0px);
+	}
+}
+
+@keyframes cursusStepAnim {
+	from {
+		opacity: 0;
+		transform: translateY(30vh);
+	}
+	to {
+		opacity: 1;
 		transform: translateY(0px);
 	}
 }
