--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,7 @@
-<p>projects works!</p>
+<div class="h-full w-full">
+	<app-project
+		*ngFor="let project of projects.getProjectListsFiltered()"
+		class="h-full w-full"
+		[data]="project"
+	></app-project>
+</div>
