--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,8 +1,13 @@
-<div class="h-full w-full grid grid-cols-2">
-	<img class="h-3/5 m-auto" [src]="environment.baseUrl + data?.image?.url" />
-	<div class="container h-3/4 my-auto">
-		<div class="header flex justify-between">
-			<div class="flex items-center">
+<div class="h-full w-full xl:grid xl:grid-cols-2 flex flex-col">
+	<div class="flex items-center justify-center">
+		<img
+			class="xl:w-5/6 sm:w-full rounded m-auto project-img"
+			[src]="environment.baseUrl + data?.image?.url"
+		/>
+	</div>
+	<div class="container my-auto">
+		<div class="header-project flex my-2">
+			<div class="flex items-center justify-center">
 				<h2 class="uppercase text-2xl font-bold inline-block mr-8">{{ data?.title }}</h2>
 				<span
 					class="status-tag inline-block"
@@ -18,7 +23,7 @@
 					>{{ data?.status || '' | translate }}</span
 				>
 			</div>
-			<div class="flex justify-end">
+			<div class="flex justify-center">
 				<img
 					class="techno-img mx-2"
 					*ngFor="let techno of data?.technologies"
