--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,3 +1,49 @@
 app-project {
-	position: fixed;
+	height: 80vh;
+}
+
+.aniWrap {
+	margin: auto;
+	display: flex;
+	width: fit-content;
+	align-items: center;
+	p {
+		margin-left: 1rem;
+	}
+}
+
+.mouse {
+	width: 28px;
+	height: 50px;
+	border: 2px solid white;
+	border-radius: 14px;
+}
+
+.scroller {
+	width: 4px;
+	height: 4px;
+	border-radius: 2px;
+	background: white;
+	position: relative;
+	top: 10px;
+	left: 12px;
+	animation: scrolls 1.3s ease-out infinite reverse; /* Chrome, Safari, Opera */
+}
+
+@keyframes scrolls {
+	0% {
+		top: 18px;
+		opacity: 1;
+		height: 4px;
+	}
+	95% {
+		top: 5px;
+		opacity: 0;
+		height: 8px;
+	}
+	100% {
+		top: 18px;
+		opacity: 1;
+		height: 4px;
+	}
 }
