--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,3 +3,10 @@ $secondary: #9e9e9e;
 $accent: #4940b2;
 $background: #1d1d1d;
 $large-screen: 1500px;
+/* 
+$primary: #f7f7f7;
+$secondary: #fdcb9e;
+$accent: #cceabb;
+$background: #3f3f44;
+$large-screen: 1500px;
+ */
