🐛 (Project Page): Fix event listener switching project

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,4 +11,5 @@
 <app-project
 	class="h-full w-full"
 	[data]="projects.getProject(projects.currentCursor)"
+	(wheel)="wheelEventListener($event)"
 ></app-project>
