--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-2 h-full">
+<div class="xl:grid xl:grid-cols-2 h-full flex items-center">
 	<div class="form flex justify-center items-center">
 		<form name="contact" netlify class="flex flex-col items-center">
 			<input
@@ -27,12 +27,12 @@
 				rows="6"
 				[placeholder]="'message' | translate"
 			></textarea>
-			<button class="cursor-pointer btnSubmit" type="submit">
+			<button (click)="handleSubmit($event)" class="cursor-pointer btnSubmit" type="submit">
 				<i class="fas fa-paper-plane"></i> {{ 'send' | translate }}
 			</button>
 		</form>
 	</div>
-	<div class="illustration flex justify-center items-center">
+	<div class="illustration xl:flex justify-center items-center hidden">
 		<img src="../../assets/img/contact.svg" />
 	</div>
 </div>
