--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,15 @@ footer {
 		grid-template-columns: 15vw 1fr;
 		height: 80vh;
 	}
+
+	header,
+	footer {
+		height: 10vh;
+	}
+
+	.copyright {
+		font-size: 16px;
+	}
 }
 
 @media screen and (max-width: $large-screen) {
@@ -19,6 +28,17 @@ footer {
 	}
 	aside {
 		display: none;
+	}
+	header {
+		height: 10vh;
+	}
+
+	footer {
+		height: auto;
+	}
+
+	.copyright {
+		font-size: 8px;
 	}
 }
 
@@ -53,10 +73,8 @@ nav {
 }
 
 .copyright {
-	position: absolute;
 	bottom: 15px;
 	right: 15px;
-	font-size: 16px;
 	color: $secondary;
 }
 
