🐛 (Contact): Fix width of contact form

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,12 +1,12 @@
-<div class="xl:grid xl:grid-cols-2 h-full flex items-center">
-	<div class="form flex justify-center items-center">
+<div class="xl:grid xl:grid-cols-2 h-full flex items-center w-full">
+	<div class="form flex justify-center items-center w-full">
 		<form
 			[formGroup]="contactForm"
 			name="contact"
 			netlify
 			netlify-honeypot="bot-field"
 			hidden
-			class="flex flex-col items-center"
+			class="flex flex-col items-center w-full xl:w-3/4"
 		>
 			<input
 				type="text"
